# PocketLedger

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml  ci.yml
crates/hledger-core/: Cargo.toml
crates/hledger-core/src/: account.rs  amount.rs  balance.rs  budget.rs  csv_import.rs  error.rs  ledger.rs  lib.rs  price_db.rs  reconciliation.rs  reports.rs
crates/hledger-parser/: Cargo.toml
crates/hledger-parser/src/: amount.rs  ast.rs  csv_rules.rs  date.rs  error.rs  grammar.pest  lib.rs  parser.rs  writer.rs
crates/hledger-parser/tests/: parse_roundtrip.rs
docs/: csv-import.md  ios-testflight-setup.md
src/: App.tsx
src-tauri/: Cargo.toml  budget.journal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: budget.rs  csv_import.rs  journal.rs  mod.rs  reconciliation.rs  reports.rs  transactions.rs
src/api/: commands.ts  types.ts
src/components/budget/: BudgetEditor.tsx
src/components/common/: AmountDisplay.tsx  Autocomplete.tsx  DateFilter.tsx  StatusBadge.tsx
src/components/csv/: CsvImportFlow.tsx
src/components/layout/: BottomNav.tsx
src/components/reconciliation/: ReconciliationFlow.tsx
src/components/transactions/: TransactionDetail.tsx  TransactionForm.tsx  TransactionList.tsx
src/pages/: AccountsPage.tsx  MorePage.tsx  ReportsPage.tsx  TransactionsPage.tsx
src/store/: journalStore.ts  settingsStore.ts
src/styles/: index.css
tests/fixtures/: assertions.journal  basic.journal  edge_cases.journal  example.hledger  multicurrency.journal  sample-with-budget.journal
