[package]
name = "pockethledger"
version = "0.1.0"
edition = "2021"
description = "PocketHLedger - Plain text accounting mobile app"

[lib]
name = "app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
chrono = "0.4"
rust_decimal = "1"
hledger-parser = { path = "../crates/hledger-parser" }
hledger-core = { path = "../crates/hledger-core" }
url = "2"
urlencoding = "2"
