[package]
name = "hledger-core"
version = "0.1.0"
edition = "2021"
description = "Financial engine for hledger/ledger plain text accounting"

[dependencies]
hledger-parser = { path = "../hledger-parser" }
rust_decimal = { version = "1", features = ["serde-with-str"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
csv = "1"
regex = "1"

[dev-dependencies]
rust_decimal_macros = "1"
